@@ -106,6 +106,28 @@
         />
     <adapter factory=".filerepresentation.DefaultWriteFile" />
 
+    <!-- GenericSetup structure import/export support -->
+    <adapter
+        factory=".exportimport.DexterityContentExporterImporter"
+        provides="Products.GenericSetup.interfaces.IFilesystemImporter"
+        for=".interfaces.IDexterityItem"
+        />
+    <adapter
+        factory=".exportimport.DexterityContentExporterImporter"
+        provides="Products.GenericSetup.interfaces.IFilesystemExporter"
+        for=".interfaces.IDexterityItem"
+        />
+    <adapter
+        factory=".exportimport.DexterityContentExporterImporter"
+        provides="Products.GenericSetup.interfaces.IFilesystemImporter"
+        for=".interfaces.IDexterityContainer"
+        />
+    <adapter
+        factory=".exportimport.DexterityContentExporterImporter"
+        provides="Products.GenericSetup.interfaces.IFilesystemExporter"
+        for=".interfaces.IDexterityContainer"
+        />
+
     <!-- PrimaryFieldInfo -->
     <adapter factory=".primary.PrimaryFieldInfo"/>
 </configure>
